--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Data/derived/*.csv
 Data/derived/*.RDS
 Data/estimates/*.RDS
 Data/est2
+Data/emily
 Data/wpp_data/WPP2019_Life_Table_OtherVariants.csv
 # For presentation
 presentation/
